[project]
name = "html-page-generator"
version = "0.1.0"
description = "Library for generating frontend using Deepseek and Unsplash."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-deepseek>=0.1.3",
    "langgraph>=0.5.3",
    "pydantic>=2.11.7",
]
